// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password quality by default 1`] = `
<div
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <label
    className="sc-AxiKw HdpNi"
    htmlFor="test"
  >
    Password
     
    <span
      className="sc-AxhCb gwiKYp"
    >
       *
    </span>
  </label>
  <input
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;

exports[`hides password quality when enabled but no password is entered 1`] = `
<div
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <label
    className="sc-AxiKw HdpNi"
    htmlFor="test"
  >
    Password
     
    <span
      className="sc-AxhCb gwiKYp"
    >
       *
    </span>
  </label>
  <input
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    showQuality={true}
    type="password"
    value=""
  />
</div>
`;

exports[`shows password quality when enabled and a password is entered 1`] = `
<div
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <label
    className="sc-AxiKw HdpNi"
    htmlFor="test"
  >
    Password
     
    <span
      className="sc-AxhCb gwiKYp"
    >
       *
    </span>
  </label>
  <input
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    showQuality={true}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;
